--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "16.13.1",
     "react-input-mask": "^2.0.4",
     "react-loader-spinner": "^4.0.0",
+    "react-lottie-player": "^1.4.1",
     "react-maskinput": "^3.2.0",
     "react-paystack": "^2.0.2",
     "sweetalert2": "^10.16.5"
